--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.4.2",
