--- a/package.json
+++ b/package.json
@@ -1,62 +1,39 @@
 {
-    "name": "microblog",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "start": "nx serve",
-        "build": "nx build",
-        "test": "nx test"
-    },
-    "private": true,
-    "devDependencies": {
-        "@nrwl/cli": "15.0.1",
-        "@nrwl/cypress": "15.0.1",
-        "@nrwl/eslint-plugin-nx": "15.0.1",
-        "@nrwl/express": "15.0.1",
-        "@nrwl/jest": "15.0.1",
-        "@nrwl/linter": "15.0.1",
-        "@nrwl/node": "15.0.1",
-        "@nrwl/react": "15.0.1",
-        "@nrwl/web": "15.0.1",
-        "@nrwl/workspace": "15.0.1",
-        "@testing-library/react": "13.4.0",
-        "@types/express": "4.17.13",
-        "@types/jest": "28.1.1",
-        "@types/node": "18.7.1",
-        "@types/react": "18.0.20",
-        "@types/react-dom": "18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.36.1",
-        "@typescript-eslint/parser": "^5.36.1",
-        "autoprefixer": "^10.4.12",
-        "babel-jest": "28.1.1",
-        "cypress": "^10.7.0",
-        "eslint": "~8.15.0",
-        "eslint-config-prettier": "8.1.0",
-        "eslint-plugin-cypress": "^2.10.3",
-        "eslint-plugin-import": "2.26.0",
-        "eslint-plugin-jsx-a11y": "6.6.1",
-        "eslint-plugin-react": "7.31.8",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "jest": "28.1.1",
-        "jest-environment-jsdom": "28.1.1",
-        "nx": "15.0.1",
-        "postcss": "^8.4.18",
-        "prettier": "^2.7.1",
-        "react-test-renderer": "18.2.0",
-        "tailwindcss": "^3.2.1",
-        "ts-jest": "28.0.5",
-        "ts-node": "10.9.1",
-        "typescript": "~4.8.2"
-    },
-    "dependencies": {
-        "axios": "^1.1.0",
-        "core-js": "^3.6.5",
-        "express": "^4.18.1",
-        "jsonwebtoken": "^8.5.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-router-dom": "^6.4.2",
-        "regenerator-runtime": "0.13.7",
-        "tslib": "^2.3.0"
-    }
+  "name": "microblog",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
