--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,24 @@
 {
     "dependencies": {
+        "argon2": "^0.30.1",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "find-config": "^1.0.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.1",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.20",
-        "path": "^0.12.7"
+        "notenv": "^2.0.3",
+        "path": "^0.12.7",
+        "pino": "^8.7.0",
+        "pino-pretty": "^9.1.1"
     },
     "name": "microblog",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "nodemon index.js | pino-pretty --translateTime --colorize"
     },
     "author": "",
     "license": "ISC",
